--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -8,18 +8,19 @@
     android:id="@+id/room_layout">
 
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
 
-        <include layout="@layout/navigation_toolbar"
+        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/navigation_toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"></include>
+            android:background="@color/colorPrimaryDark">
 
-
-
+        </android.support.v7.widget.Toolbar>
 
 
         <android.support.v4.widget.NestedScrollView
@@ -127,8 +128,6 @@
 
 
             android:paddingBottom="@dimen/activity_vertical_margin"
-            app:behavior_hideable="true"
-            app:behavior_peekHeight="50dp"
             app:elevation="4dp"
             app:layout_behavior="@string/bottom_sheet_behavior"
             tools:context="pl.zpi.museumguide.Room">
@@ -166,7 +165,7 @@
 
 
         </LinearLayout>
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 
 
     <android.support.design.widget.NavigationView
@@ -175,6 +174,7 @@
         android:layout_gravity="start"
         android:background="@color/colorPrimaryDark"
         app:menu="@layout/navigation_menu"
+        android:id="@+id/room_nav"
 
         >
 
