--- a/app/src/main/res/layout/navigation_toolbar.xml
+++ b/app/src/main/res/layout/navigation_toolbar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:id="@+id/navigation_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark">
 
 </android.support.v7.widget.Toolbar>
