--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -21,58 +21,117 @@
 
             <FrameLayout
                 android:id="@+id/background_room"
-                android:layout_width="301dp"
-                android:layout_height="353dp"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="120dp">
+                android:background="#a3ccd6">
 
-                <RelativeLayout
-                    android:id="@+id/map"
+                <ViewFlipper
+                    android:id="@+id/flipper"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
-                        android:id="@+id/sticker_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignTop="@+id/sticker_2"
-                        android:layout_marginStart="29dp"
-                        app:srcCompat="@drawable/gui_sticker" />
+                    <RelativeLayout
+                        android:id="@+id/map"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/gui_map"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:layout_editor_absoluteY="8dp">
 
-                    <ImageView
-                        android:id="@+id/sticker_2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginEnd="69dp"
-                        android:layout_marginTop="25dp"
-                        app:srcCompat="@drawable/gui_sticker" />
+                    </RelativeLayout>
 
-                    <ImageView
-                        android:id="@+id/sticker_3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignStart="@+id/sticker_2"
-                        android:layout_marginBottom="52dp"
-                        android:layout_marginStart="34dp"
-                        app:srcCompat="@drawable/gui_sticker" />
+                    <RelativeLayout
+                        android:id="@+id/map2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/gui_room1">
 
-                    <ImageView
-                        android:id="@+id/sticker_4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_above="@+id/sticker_3"
-                        android:layout_alignStart="@+id/sticker_3"
-                        android:layout_marginBottom="108dp"
-                        app:srcCompat="@drawable/gui_sticker" />
+                        <ImageView
+                            android:id="@+id/sticker_21"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="77dp"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_marginBottom="153dp"
+                            android:layout_above="@+id/sticker_24"
+                            android:layout_alignParentStart="true" />
 
-                </RelativeLayout>
+                        <ImageView
+                            android:id="@+id/sticker_22"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_alignTop="@+id/sticker_21"
+                            android:layout_centerHorizontal="true" />
+
+                        <ImageView
+                            android:id="@+id/sticker_23"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="90dp"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignStart="@+id/sticker_22" />
+
+                        <ImageView
+                            android:id="@+id/sticker_24"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_alignTop="@+id/sticker_23"
+                            android:layout_alignStart="@+id/sticker_21" />
+
+                    </RelativeLayout>
+
+
+                    <RelativeLayout
+                        android:id="@+id/map3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/gui_room2">
+
+                        <ImageView
+                            android:id="@+id/sticker_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_alignTop="@+id/sticker_2"
+                            android:layout_alignStart="@+id/sticker_4" />
+
+                        <ImageView
+                            android:id="@+id/sticker_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="118dp"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_marginEnd="60dp"
+                            android:layout_above="@+id/sticker_3"
+                            android:layout_toStartOf="@+id/sticker_1" />
+
+                        <ImageView
+                            android:id="@+id/sticker_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="90dp"
+                            app:srcCompat="@drawable/gui_sticker"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignStart="@+id/sticker_2" />
+
+                        <ImageView
+                            android:id="@+id/sticker_4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@+id/sticker_3"
+                            android:layout_centerHorizontal="true"
+                            app:srcCompat="@drawable/gui_sticker" />
+
+                    </RelativeLayout>
+
+                </ViewFlipper>
 
             </FrameLayout>
 
