--- a/app/src/main/res/layout/author_info.xml
+++ b/app/src/main/res/layout/author_info.xml
@@ -21,7 +21,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="23dp"
             android:textStyle="bold"
-            android:text="AuthorInfo"
+            android:text="Informacje o autorze"
             android:textSize="16sp" />
 
         <ImageView
@@ -40,7 +40,7 @@
             android:layout_below="@+id/authorImageFrag"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="19dp"
-            android:text="Author Works"
+            android:text="Prace artysty"
             android:textStyle="bold"
             android:textSize="16sp" />
 
